--- a/materiales/templates/components/baseb.html
+++ b/materiales/templates/components/baseb.html
@@ -46,10 +46,11 @@
         </footer>
     </div>    
 
-    <!-- Scripts adicionales (si se necesitan) -->
-    {% block extra_scripts %}
+    <!-- Scripts base (siempre incluidos) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    {% endblock %}
+    
+    <!-- Scripts adicionales (si se necesitan) -->
+    {% block extra_scripts %}{% endblock %}
     {% block modals %}{% endblock %}
 </body>
 </html>
